Tapos na yung file sharing feature, pati mga code naimproved narin, mas mabilis na yung pag log in

--- a/ClientApp/ClientApp.vbproj
+++ b/ClientApp/ClientApp.vbproj
@@ -173,5 +173,11 @@
   <ItemGroup>
     <None Include="Resources\avatar.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimize.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimized-fixed.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
