--- a/ClientApp/ClientApp.vbproj
+++ b/ClientApp/ClientApp.vbproj
@@ -83,6 +83,7 @@
     <Compile Include="ForgotPasswordForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormUtils.vb" />
     <Compile Include="Login.vb">
       <SubType>Form</SubType>
     </Compile>
